Add static files

--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -9,6 +9,7 @@
     <header>
       <h1><a href="/">Snippetbox</a></h1>
     </header>
+    {{template "nav" .}}
     <main>{{template "main" .}}</main>
   </body>
   <footer>Powered by <a href="hhtps://go.dev/">Go</a></footer>
