--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="utf-8" />
     <title>{{template "title" .}} - Snippetbox</title>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700">
   </head>
   <body>
     <header>
@@ -12,6 +15,7 @@
     {{template "nav" .}}
     <main>{{template "main" .}}</main>
   </body>
-  <footer>Powered by <a href="hhtps://go.dev/">Go</a></footer>
-</html>
+  <footer>Powered by <a href="https://go.dev/">Go</a></footer>
+  <script src="/static/js/main.js" type="text/javascript"></script>
+  </html>
 {{end}}
